2005-09-15, Tim
 PATCH: [ 1292279 ] Various Updates in German Translation
  Src/Languages/German: MergeGerman.rc

2005-09-14 Kimmo
 PATCH: [ 1290477 ] Catalan translation update
  Submitted by Jordi Vilar
  Src/Languages/Catalan: MergeCatalan.rc

2005-09-13 Kimmo
 PATCH: [ 1289037 ] Some (non)significant diff count fixes
  Src: DiffList.cpp DiffList.h MergeDoc.cpp MergeEditView.cpp

2005-09-12 Kimmo
 PATCH: [ 1284150 ] Fix Shell Extension registering problem
  Also bump version to 1.6
  ShellExtension: ShellExtension.cpp ShellExtension.rc

2005-09-09, Perry
 BUG: [ 1284304 ] StaticLink crashes after mouse over event
  Changed signature of CStaticLink::OnSetCursor to start with CWnd *
  Src\Common: StaticLink.cpp StaticLink.h

2005-09-09, Tim
 PATCH: [ 1285404 ] Various Updates in German Translation
  Src/Languages/German: MergeGerman.rc

2005-09-08, Perry
 PATCH: [ 1284890 ] Use Changes.txt instead of readme.txt for ChangeLog
  Added ChangeLogs folder to project, and put Changes.txt (this),
  readme.txt, and CHANGELO into new ChangeLogs folder.
 PATCH: [ 1283466 ] French translation
  New translation by Jean-F Jolin
  Src/Languages/French: MergeFrench.rc

2005-09-07, Perry
 Previous change history is in file readme.txt